--- a/text/s2-c02-getting-a-git-repo.textile
+++ b/text/s2-c02-getting-a-git-repo.textile
@@ -1,3 +1,35 @@
 h2. Getting a Git Repository
 
-git clone
+There are two major ways you will get a Git repository - you will either clone an existing project, or you will initialize a new one.
+
+h3. New Repositories
+
+To create a new Git repository somewhere, simply go to the directory you want to add to version control and type
+
+shell. git init
+
+This will create a _.git_ directory in your current working directory that is entirely empty.  If you have existing files you want to add to your new repository, type
+
+shell. git add .
+  git commit -m 'my first commit'
+
+This will add all of your current files into your new repository and index and then create your first commit object, pointing your new 'master' branch to it.  Congratulations, you have now added your source code to Git.
+
+("git init":http://www.kernel.org/pub/software/scm/git/docs/git-init.html,
+"git commit":http://www.kernel.org/pub/software/scm/git/docs/git-commit.html, 
+"git add":http://www.kernel.org/pub/software/scm/git/docs/git-add.html)
+
+h3. Cloning a Repository
+
+Many times you will be cloning a repository, however.  This means that you are creating a complete copy of another repo, including all of it's history and published branches. 
+
+In order to do this, you simply need a URL that has a git repository hosted there, which can be over _http_, _https_, _ssh_ or the special _git_ protocol. We will use the public hosted repository of the simple library I mentioned at the beginning of the book.
+
+shell. git clone git://github.com/schacon/simplegit.git
+
+This will by default create a new directory called 'simplegit' and do an initial checkout of the 'master' branch.  If you want to put it in a different directory, you can specify that on the command line, too.
+
+shell. git clone git://github.com/schacon/simplegit.git my_directory
+
+
+("git clone":http://www.kernel.org/pub/software/scm/git/docs/git-clone.html)
