--- a/text/s4-c10-history-manipulation.textile
+++ b/text/s4-c10-history-manipulation.textile
@@ -1,1 +1,7 @@
 h2. History Manipulation
+
+h3. Git Filter Branch
+
+http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html
+
+h3. Splitting One Commit into Two
